9 June 2008: Wouter
	- in iteration response type code
	  * first check for SOA record (negative answer) before NS record
	    and lameness.
	  * check if no AA bit for non-forwarder, and thus lame zone.
	    In response to error report by Richard Doty for mail.opusnet.com.
	- fixup unput warning from lexer on freeBSD.

8 June 2008: Wouter
	- if multiple CNAMEs, use the first one. Fixup akamai CNAME bug.
	  Reported by Robert Edmonds.
	- iana port updated.

4 June 2008: Wouter
	- updated libtool files with newer version.
	- iana portlist updated.

3 June 2008: Wouter
	- fixup local-zone: "30.172.in-addr.arpa." nodefault, so that the
	  trailing dot is not used during comparison.

2 June 2008: Wouter
	- Jelte fixed bugs in my absence
	  - bug 178: fixed unportable shell usage in configure (relied on 
	    bash shell).
	  - bug 180: fixed buffer overflow in unbound-checkconf use of strncat.
	  - bug 181: fixed buffer overflow in ldns (called by unbound to parse
	    config file parts).
	- fixes by Wouter
	  - bug 177: fixed compilation failure on opensuse, the 
	    --disable-static configure flag caused problems.  (Patch from 
	    Klaus Singvogel)
	  - bug 179: same fix as 177.
	  - bug 185: --disable-shared not passed along to ldns included with 
	    unbound. Fixed so that configure parameters are passed to the
	    subdir configure script.
	    fixed that ./libtool is used always, you can still override
	    manually with ./configure libtool=mylibtool or set $libtool in
	    the environment.
	- update of the ldns tarball to current ldns svn version (fix 181).
	- bug 184: -r option for unbound-host, read resolv.conf for 
	  forwarder. (Note that forwarder must support DNSSEC for validation
	  to succeed).

23 May 2008: Wouter
	- mingw32 porting.
	  - test for sys/wait.h
	  - WSAEWOULDBLOCK test after nonblocking TCP connect.
	  - write_iov_buffer removed: unused and no struct iov on windows.
	  - signed/unsigned warning fixup mini_event.